# Growth-Wave

./: .gitignore  README.md  growth_wave.db  pyproject.toml  test.db
app/: exceptions.py  main.py
app/api/: deps.py
app/collectors/: __init__.py  base.py  bitbucket_collector.py  jira_collector.py
app/core/: config.py  database.py  llm.py  security.py
app/crud/: __init__.py  base.py  collaboration.py  crud_project.py  crud_report.py  department_grade_ratio.py  evaluation.py  evaluation_calculator.py  evaluation_period.py  external_account.py  final_evaluation.py  grade_adjustment.py  organization.py  peer_evaluation.py  pm_evaluation.py  praise.py  praise_limiter.py  user.py  (+6 more)
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  GUIDE_BACKEND.md  GUIDE_COMMON.md  GUIDE_FRONTEND.md  README.md  REQUIREMENTS.md  WORK_PLAN.md  request_for_backend_add_peer_feedback.md  request_for_backend_calculate_final_score.md  request_for_backend_evaluation_enhancements.md  request_for_backend_refactor_project_evaluation_period.md  request_for_backend_team_eval_ux.md  system_info.md
frontend/: package-lock.json  package.json
migrations/: 001_add_evaluation_comments.sql  002_refactor_peer_evaluations_score.sql  003_rename_feedback_to_comment.sql  004_refactor_qualitative_evaluation_model.sql  005_add_reports_to_in_users.sql  006_refactor_project_table.sql  007_add_department_evaluation_model.sql  008_refactor_praise_system.sql  009_add_category_to_collaboration.sql  010_recreate_external_accounts_table.sql  011_create_retrospectives_table.sql
tests/: conftest.py  test_module_sanity.py
(+242 files in other folders)
