[project]
name = "gemini-hackathon-project"
version = "0.1.0"
description = ""
authors = [
    {name = "hjjang",email = "hjjang@suresofttech.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "app"}]
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (==3.2.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "openai (>=2.5.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
